# scPairing

./: .gitignore  README.md  setup.cfg
docs/: README.md  scPairing.md  triscPairing.md
experiments/: 10x_bmmc.yaml  atac.yaml  full_cite.yaml  full_multi.yaml  mini_bmmc.yaml  mouse_bmmc.yaml  mouse_brain.yaml  mouse_skin.yaml  mouse_tac.yaml  protein.yaml  tri.yaml
src/benchmarking/: batch_knn.py  compute_pairings.py  convert_ranges.py  kfold_cobolt.py  kfold_moETM.py  kfold_multivi.py  kfold_scCLUE.py  mofa.py  run_cobolt.py  run_mira.py  run_moETM.py  run_multivi.py  run_scot.py  run_scvi.py  run_scvi_kfold.py  scCLUE.py  scale.py  train_trueclip.py
src/scCLIP/: __init__.py  batch_sampler.py  crossbatch_model.py  eval_utils.py  kfold_model.py  kfold_model_retrain_scvi.py  kfold_trueclip.py  logging_utils.py  main.py  split_model.py  submission.py  train_model.py  train_trueclip.py  train_trueclip_inverse.py  trimain.py
src/scCLIP/models/: BaseCellModel.py  BatchClassifier.py  __init__.py  constants.py  log_likelihood.py  losses.py  model.py  model_utils.py  multiETM.py  scCLIP.py  scCLIP_share.py  scCLIP_share_vi.py  scETM.py  scVI.py  scviCLIP.py  triCLIP.py  triTrueCLIP.py  trimodel.py  trueCLIP.py  trueCLIP_euclidean.py  utils.py
src/scPairing/: __init__.py  batch_sampler.py  eval_utils.py  logging_utils.py  scPairing.py  trimodal_pairing.py  triscPairing.py
tutorials/: Basic scPairing integration-Copy1.ipynb  Basic scPairing integration.ipynb  README.md  Trimodal scPairing.ipynb
tutorials/.ipynb_checkpoints/: NoReconstructionTutorial-checkpoint.ipynb
(+15 files in other folders)
