[metadata]
name = scPairing
version = 0.1.0
author = Jeffrey Niu
author_email = yinian@cs.ubc.ca
description = Single cell contrastive VAE for single-cell multiomics data integration and generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ding-Group/scPairing
project_urls =
    Bug Tracker = https://github.com/Ding-Group/scPairing/issues
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD Licenses
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.5
    numpy>=1.16.2
    matplotlib>=3.1.2
    scikit-learn>=0.20.3
    h5py>=2.9.0
    pandas>=0.25
    tqdm>=4.31.1
    anndata>=0.7
    scanpy>=1.4.6
    scipy>=1.0
    pandas>=1.5.0

[options.extras_require]
all =
    scvi-tools>=1.0.0
    harmonypy

[options.packages.find]
where = src